<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/toolbar"/>
    <include layout="@layout/bottom_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomActionBar"
        android:layout_below="@+id/topActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupOfEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:constraint_referenced_ids="editFirstName,editEmail,editBirth,editRoom,editLastName,editGender,editPhone,ok,editBuilding,editDistrict" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupOfTextAndButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="text_firstName,text_lastName,text_room,text_birth_date,text_gender,text_phone,text_email,button_change_Inf,button_transactionRecord,button_changePassword,text_district,text_building" />

            <Button
                android:id="@+id/button_change_Inf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_t1"
                android:padding="10dp"
                android:text="@string/change_Inf"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="12sp"
                app:backgroundTint="#66B9F9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/district"
                app:layout_constraintVertical_bias="0.17000002" />

            <Button
                android:id="@+id/button_transactionRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_t1"
                android:padding="10dp"
                android:text="@string/transaction_record"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="12sp"
                app:backgroundTint="#66B9F9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button_changePassword"
                app:layout_constraintTop_toBottomOf="@+id/button_changePassword"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/button_changePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_t1"
                android:padding="10dp"
                android:text="@string/change_password"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="12sp"
                app:backgroundTint="#66B9F9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button_change_Inf"
                app:layout_constraintTop_toBottomOf="@+id/button_change_Inf"
                app:layout_constraintVertical_bias="0.017" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/button_t1"
                android:padding="10dp"
                android:text="@string/ok"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"

                android:textSize="12sp"
                android:visibility="invisible"
                app:backgroundTint="#66B9F9"
                app:layout_constraintBottom_toBottomOf="@+id/button_change_Inf"
                app:layout_constraintStart_toEndOf="@+id/button_change_Inf" />

            <EditText
                android:id="@+id/editBuilding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"

                android:hint="@string/building"
                android:importantForAutofill="no"
                android:inputType="text"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/building"
                app:layout_constraintStart_toStartOf="@+id/editRoom" />

            <EditText
                android:id="@+id/editDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/district"
                android:importantForAutofill="no"
                android:inputType="text"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/district"
                app:layout_constraintStart_toStartOf="@+id/editBuilding" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:ems="10"


                android:hint="@string/firstName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/firstName"
                app:layout_constraintStart_toEndOf="@+id/firstName" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"

                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/editBirth" />

            <EditText
                android:id="@+id/editBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"

                android:hint="@string/birth_Date"
                android:importantForAutofill="no"
                android:inputType="none"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/birth_date"
                app:layout_constraintStart_toStartOf="@+id/editPhone" />

            <EditText
                android:id="@+id/editRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/room"
                android:importantForAutofill="no"
                android:inputType="text"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/room"
                app:layout_constraintStart_toStartOf="@+id/editEmail" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/lastName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/lastName"
                app:layout_constraintStart_toStartOf="@+id/editFirstName" />

            <EditText
                android:id="@+id/editGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/maleOrFemale"
                android:importantForAutofill="no"
                android:inputType="text"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/gender"
                app:layout_constraintStart_toStartOf="@+id/editLastName" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/phone"
                app:layout_constraintStart_toStartOf="@+id/editGender" />

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/firstName"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/lastName"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/firstName"
                app:layout_constraintTop_toBottomOf="@+id/firstName" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/lastName"
                app:layout_constraintTop_toBottomOf="@+id/lastName" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/gender"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <TextView
                android:id="@+id/birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/birth_Date"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/phone"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/birth_date"
                app:layout_constraintTop_toBottomOf="@+id/birth_date" />

            <TextView
                android:id="@+id/room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/room"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/building"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/room"
                app:layout_constraintTop_toBottomOf="@+id/room" />

            <TextView
                android:id="@+id/district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/district"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/building" />

            <TextView
                android:id="@+id/text_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/district"
                app:layout_constraintStart_toStartOf="@+id/text_building"
                app:layout_constraintTop_toBottomOf="@+id/text_building" />

            <TextView
                android:id="@+id/text_building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/building"
                app:layout_constraintStart_toStartOf="@+id/text_room"
                app:layout_constraintTop_toBottomOf="@+id/text_room" />

            <TextView
                android:id="@+id/text_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/gender"
                app:layout_constraintStart_toStartOf="@+id/text_lastName"
                app:layout_constraintTop_toBottomOf="@+id/text_lastName" />

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/phone"
                app:layout_constraintStart_toStartOf="@+id/text_gender"
                app:layout_constraintTop_toBottomOf="@+id/text_gender" />

            <TextView
                android:id="@+id/text_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/room"
                app:layout_constraintStart_toStartOf="@+id/text_email"
                app:layout_constraintTop_toBottomOf="@+id/text_email" />

            <TextView
                android:id="@+id/text_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="40dp"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/firstName"
                app:layout_constraintStart_toEndOf="@+id/firstName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/birth_date"
                app:layout_constraintStart_toStartOf="@+id/text_phone"
                app:layout_constraintTop_toBottomOf="@+id/text_phone" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/text_birth_date"
                app:layout_constraintTop_toBottomOf="@+id/text_birth_date" />

            <TextView
                android:id="@+id/text_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/lastName"
                app:layout_constraintStart_toStartOf="@+id/text_firstName"
                app:layout_constraintTop_toBottomOf="@+id/text_firstName" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</RelativeLayout>